@@ -2243,9 +2243,30 @@ name|IOException
 throws|,
 name|YarnException
 block|{
+specifier|final
 name|boolean
-name|useHttps
+name|isTokenServiceAddrEmpty
 init|=
+name|timelineDT
+operator|.
+name|getService
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+decl_stmt|;
+specifier|final
+name|String
+name|scheme
+init|=
+name|isTokenServiceAddrEmpty
+condition|?
+literal|null
+else|:
+operator|(
 name|YarnConfiguration
 operator|.
 name|useHttps
@@ -2255,21 +2276,20 @@ operator|.
 name|getConfig
 argument_list|()
 argument_list|)
-decl_stmt|;
-specifier|final
-name|String
-name|scheme
-init|=
-name|useHttps
 condition|?
 literal|"https"
 else|:
 literal|"http"
+operator|)
 decl_stmt|;
 specifier|final
 name|InetSocketAddress
 name|address
 init|=
+name|isTokenServiceAddrEmpty
+condition|?
+literal|null
+else|:
 name|SecurityUtil
 operator|.
 name|getTokenServiceAddr
@@ -2338,10 +2358,16 @@ argument_list|,
 name|connConfigurator
 argument_list|)
 decl_stmt|;
+comment|// If the token service address is not available, fall back to use
+comment|// the configured service address.
 specifier|final
 name|URI
 name|serviceURI
 init|=
+name|isTokenServiceAddrEmpty
+condition|?
+name|resURI
+else|:
 operator|new
 name|URI
 argument_list|(
@@ -2418,9 +2444,30 @@ name|IOException
 throws|,
 name|YarnException
 block|{
+specifier|final
 name|boolean
-name|useHttps
+name|isTokenServiceAddrEmpty
 init|=
+name|timelineDT
+operator|.
+name|getService
+argument_list|()
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|isEmpty
+argument_list|()
+decl_stmt|;
+specifier|final
+name|String
+name|scheme
+init|=
+name|isTokenServiceAddrEmpty
+condition|?
+literal|null
+else|:
+operator|(
 name|YarnConfiguration
 operator|.
 name|useHttps
@@ -2430,21 +2477,20 @@ operator|.
 name|getConfig
 argument_list|()
 argument_list|)
-decl_stmt|;
-specifier|final
-name|String
-name|scheme
-init|=
-name|useHttps
 condition|?
 literal|"https"
 else|:
 literal|"http"
+operator|)
 decl_stmt|;
 specifier|final
 name|InetSocketAddress
 name|address
 init|=
+name|isTokenServiceAddrEmpty
+condition|?
+literal|null
+else|:
 name|SecurityUtil
 operator|.
 name|getTokenServiceAddr
@@ -2513,10 +2559,16 @@ argument_list|,
 name|connConfigurator
 argument_list|)
 decl_stmt|;
+comment|// If the token service address is not available, fall back to use
+comment|// the configured service address.
 specifier|final
 name|URI
 name|serviceURI
 init|=
+name|isTokenServiceAddrEmpty
+condition|?
+name|resURI
+else|:
 operator|new
 name|URI
 argument_list|(
